# rules_kara

./: .bazelrc  LICENSE  README.md  WORKSPACE  deps.bzl  kara.bzl  repository.bzl
resources/: BUILD.bazel
src/: BUILD.bazel  KaraWrapper.scala
